pypet 0.4.1

*   BUG FIX: Fixed slow `f_get_from_all_runs` with run groups

*   More intuitive behaviro for `f_to_dict` to only start at initiating group node.


pypet 0.4.0

*   BUG FIX: Correct progressbar printing in Python3 using reprint

*   ENH: New ``nested`` option for ``f_to_dict``

*   Python 3 Support ONLY!!!


pypet 0.3.0

*   Support for BRIAN2

*   New Brian2Parameter

*   New Brian2Result and Brian2MontitorResult

*   New BRIAN2 Network framework

*   BUG FIX: Auto loading parameters will set the parameter to the current run.


pypet 0.2.0

*   No longer beta


pypet 0.2b1

*   ENH: Pypet can now apply fast merging if trajectories reside in different files.
    If one still wants to apply slow merging, one can set `slow_merge=True`.

*   ENH: New `merge_all_in_folder` function

*   The range is now a list that is by default copied upon request. To avoid
    quadratic complexity with multiple calls to `f_expand`.

*   ENH: Meta data of single runs is no longer stored during the
    single run to avoid overhead and guarantee faster runs

*   For more stability continuing is no longer supported for the
    ``'QUEUE'`` and ``'PIPE'`` wrap modes.

*   Queue retries are now logged in debug mode.

*   One can now choose what `f_iter_runs` should return.

*   New `f_run_map` and `f_pipeline_map` functionality for iterable arguments.

*   New wrap mode ``'LOCAL'`` to ensure data is only stored by the main program

*   Immediate post-processing is now supported by all wrap modes.

*   PIPE wrapping is no longer supported under Windows

*   The `add_time` parameter of the trajectory is by default now `False`

*   New `niceness` feature to prioritize child processes

*   New `scoop` feature to allow multiprocessing with the scoop package.

*   Passing `log_multiproc=False` to an environment disables multiprocess logging.

*   Parameters and Results can nest data in HDF5 themselves using dot notation.

*   Removed BrianDurationParameter
