@@ -16,9 +16,9 @@ addons:
 matrix:
   include:
     - python: 3.3
-      env: NEWEST=FALSE PANDAS_VERSION=0.15 TABLES_VERSION=3.0 COVERAGE=OFF GIT_TEST=OFF EXAMPLES=OFF TEST_SUITE=ON SCOOP=OFF
-    - python: 3.5
-      env: NEWEST=TRUE COVERAGE=OFF GIT_TEST=OFF EXAMPLES=OFF TEST_SUITE=ON SCOOP=OFF
+      env: NEWEST=FALSE PANDAS_VERSION=0.15 TABLES_VERSION=3.0 COVERAGE=OFF GIT_TEST=OFF EXAMPLES=OFF TEST_SUITE=SINGLECORE SCOOP=OFF
+    - python: 3.6
+      env: NEWEST=TRUE COVERAGE=OFF GIT_TEST=OFF EXAMPLES=OFF TEST_SUITE=MULTIPROC SCOOP=OFF
     - python: 3.5
       env: NEWEST=TRUE COVERAGE=ON GIT_TEST=ON EXAMPLES=OFF TEST_SUITE=OFF SCOOP=OFF
     - python: 3.4
